--- a/index.html
+++ b/index.html
@@ -90,25 +90,10 @@ sitemap: true
               <li class="portfolio-section__item __js_masonry-item">
                 <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
                   <span class="project-preview__image">
-                    <img src="img/picture/common/portfolio-section/3.jpg" width="531" height="417" alt="Abstract lists">
+                    <img src="{{ '/assets/img/american/american-coffee-table-book-2.jpg' | relative_url }}" width="531" height="417" alt="SUN by D.H. Lawrence">
                   </span>
                   <span class="project-preview__bottom">
-                    <span class="project-preview__title">Abstract lists</span>
-                    <span class="project-preview__icon">
-                      <svg width="24" height="23">
-                        <use xlink:href="#link-arrow2"></use>
-                      </svg>
-                    </span>
-                  </span>
-                </a>
-              </li>
-              <li class="portfolio-section__item __js_masonry-item  portfolio-section__item--two-thirds">
-                <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
-                  <span class="project-preview__image">
-                    <img src="img/picture/common/portfolio-section/4-mobile.jpg" alt="Green onion">
-                  </span>
-                  <span class="project-preview__bottom">
-                    <span class="project-preview__title">Green onion</span>
+                    <span class="project-preview__title">SUN by D.H. Lawrence</span>
                     <span class="project-preview__icon">
                       <svg width="24" height="23">
                         <use xlink:href="#link-arrow2"></use>
