--- a/index.html
+++ b/index.html
@@ -39,73 +39,73 @@ sitemap: true
         </section>
         <div class="col-md-8" style="height: 1px;"></div>
       </div>
-
-          <section class="portfolio-section portfolio-section--no-padding">
-            <header class="portfolio-section__header row align-items-end">
-              <div class="col-8 col-xl-6 offset-xl-2">
-                <h2 class="portfolio-section__title">Our Books</h2>
-              </div>
-              <div class="col-4 text-right">
-                <a class="portfolio-section__more arrow-link" href="projects-masonry.html">
-                  <span class="arrow-link__text">View All Books</span>
-                  <span class="arrow-link__icon">
-                    <svg width="75" height="75">
-                      <use xlink:href="#link-arrow"></use>
-                    </svg>
-                  </span>
-                </a>
-              </div>
-            </header>
-            <ul class="portfolio-section__grid __js_portfolio-section-masonry">
-              <li class="portfolio-section__item __js_masonry-item">
-                <a class="project-preview project-preview--elastic project-preview--vertical" href="single-project.html">
-                  <span class="project-preview__image">
-                    <img src="{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}" alt="American Coffee Table Book">
-                  </span>
-                  <span class="project-preview__bottom">
-                    <span class="project-preview__title">American Coffee Table Book</span>
-                    <span class="project-preview__icon">
-                      <svg width="24" height="23">
-                        <use xlink:href="#link-arrow2"></use>
-                      </svg>
-                    </span>
-                  </span>
-                </a>
-              </li>
-              <li class="portfolio-section__item __js_masonry-item">
-                <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
-                  <span class="project-preview__image">
-                    <img src="{{ '/assets/img/bitcoin/bitcoin-coffee-table-book-1.png' | relative_url }}" width="531" height="417" alt="Bitcoin Coffee Table Book">
-                  </span>
-                  <span class="project-preview__bottom">
-                    <span class="project-preview__title">Bitcoin Coffee Table Book</span>
-                    <span class="project-preview__icon">
-                      <svg width="24" height="23">
-                        <use xlink:href="#link-arrow2"></use>
-                      </svg>
-                    </span>
-                  </span>
-                </a>
-              </li>
-              <li class="portfolio-section__item __js_masonry-item">
-                <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
-                  <span class="project-preview__image">
-                    <img src="{{ '/assets/img/american/american-coffee-table-book-2.jpg' | relative_url }}" width="531" height="417" alt="SUN by D.H. Lawrence">
-                  </span>
-                  <span class="project-preview__bottom">
-                    <span class="project-preview__title">SUN by D.H. Lawrence</span>
-                    <span class="project-preview__icon">
-                      <svg width="24" height="23">
-                        <use xlink:href="#link-arrow2"></use>
-                      </svg>
-                    </span>
-                  </span>
-                </a>
-              </li>
-            </ul>
-          </section>
-
-</div>
-</main>
-</div>
+      <section class="portfolio-section portfolio-section--no-padding">
+        <header class="portfolio-section__header row align-items-end">
+          <div class="col-8 col-xl-6 offset-xl-2">
+            <h2 class="portfolio-section__title">Our Books</h2>
+          </div>
+          <div class="col-4 text-right">
+            <a class="portfolio-section__more arrow-link" href="projects-masonry.html">
+              <span class="arrow-link__text">View All Books</span>
+              <span class="arrow-link__icon">
+                <svg width="75" height="75">
+                  <use xlink:href="#link-arrow"></use>
+                </svg>
+              </span>
+            </a>
+          </div>
+        </header>
+        <ul class="portfolio-section__grid __js_portfolio-section-masonry">
+          <li class="portfolio-section__item __js_masonry-item">
+            <a class="project-preview project-preview--elastic project-preview--vertical" href="single-project.html">
+              <span class="project-preview__image">
+                <img src="{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}"
+                  alt="American Coffee Table Book">
+              </span>
+              <span class="project-preview__bottom">
+                <span class="project-preview__title">American Coffee Table Book</span>
+                <span class="project-preview__icon">
+                  <svg width="24" height="23">
+                    <use xlink:href="#link-arrow2"></use>
+                  </svg>
+                </span>
+              </span>
+            </a>
+          </li>
+          <li class="portfolio-section__item __js_masonry-item">
+            <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
+              <span class="project-preview__image">
+                <img src="{{ '/assets/img/bitcoin/bitcoin-coffee-table-book-1.png' | relative_url }}" width="531"
+                  height="417" alt="Bitcoin Coffee Table Book">
+              </span>
+              <span class="project-preview__bottom">
+                <span class="project-preview__title">Bitcoin Coffee Table Book</span>
+                <span class="project-preview__icon">
+                  <svg width="24" height="23">
+                    <use xlink:href="#link-arrow2"></use>
+                  </svg>
+                </span>
+              </span>
+            </a>
+          </li>
+          <li class="portfolio-section__item __js_masonry-item">
+            <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
+              <span class="project-preview__image">
+                <img src="{{ '/assets/img/american/american-coffee-table-book-2.jpg' | relative_url }}" width="531"
+                  height="417" alt="SUN by D.H. Lawrence">
+              </span>
+              <span class="project-preview__bottom">
+                <span class="project-preview__title">SUN by D.H. Lawrence</span>
+                <span class="project-preview__icon">
+                  <svg width="24" height="23">
+                    <use xlink:href="#link-arrow2"></use>
+                  </svg>
+                </span>
+              </span>
+            </a>
+          </li>
+        </ul>
+      </section>
+  </div>
+  </main>
 </div>
