--- a/index.html
+++ b/index.html
@@ -4,103 +4,105 @@ title: TABLE books pro
 sitemap: true
 ---
 
-    <main>
-        <section class="creative-hero col-md-4">
-          <div class="creative-hero__container">
-            <div class="row">
-              <!-- Text Section -->
-              <div class="col-6" data-aos="fade-right" data-aos-delay="0">
-                <div class="services-section__text">
-                  <h2 class="creative-hero__title">
-                    <span style="display: inline-block; width: 50%;">OWN</span>
-                    <span style="display: inline-block; width: 50%;">THE</span>
-                    <span style="display: inline-block; width: 50%;">EDGE</span>
-                  </h2>
-                </div>
-              </div>
-              <!-- Image Section -->
-              <div class="col-6">
-                <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
-                  style="max-width: 100%; height: auto;" class="img-fluid" alt="Table Book Logo">
-              </div>
-              <div class="row">
-                <div class="col-12">
-                  <div class="single-project__hero-text" style="max-width: 100%; text-align: justify;"
-                    data-aos="fade-up" data-aos-delay="50">
-                    {{ site.description }}
-                  </div>
-                </div>
+<main>
+  <div class="row">
+    <section class="creative-hero col-md-4">
+      <div class="creative-hero__container">
+        <div class="row">
+          <!-- Text Section -->
+          <div class="col-6" data-aos="fade-right" data-aos-delay="0">
+            <div class="services-section__text">
+              <h2 class="creative-hero__title">
+                <span style="display: inline-block; width: 50%;">OWN</span>
+                <span style="display: inline-block; width: 50%;">THE</span>
+                <span style="display: inline-block; width: 50%;">EDGE</span>
+              </h2>
+            </div>
+          </div>
+          <!-- Image Section -->
+          <div class="col-6">
+            <img src="{{ '/assets/img/logo/table-book-logo.png' | relative_url }}"
+              style="max-width: 100%; height: auto;" class="img-fluid" alt="Table Book Logo">
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <div class="single-project__hero-text" style="max-width: 100%; text-align: justify;" data-aos="fade-up"
+                data-aos-delay="50">
+                {{ site.description }}
               </div>
             </div>
           </div>
-        </section>
-        <div class="col-md-8" style="height: 1px;"></div>
+        </div>
       </div>
-      <section class="portfolio-section portfolio-section--no-padding">
-        <header class="portfolio-section__header row align-items-end">
-          <div class="col-8 col-xl-6 offset-xl-2">
-            <h2 class="portfolio-section__title">Our Books</h2>
-          </div>
-          <div class="col-4 text-right">
-            <a class="portfolio-section__more arrow-link" href="projects-masonry.html">
-              <span class="arrow-link__text">View All Books</span>
-              <span class="arrow-link__icon">
-                <svg width="75" height="75">
-                  <use xlink:href="#link-arrow"></use>
-                </svg>
-              </span>
-            </a>
-          </div>
-        </header>
-        <ul class="portfolio-section__grid __js_portfolio-section-masonry">
-          <li class="portfolio-section__item __js_masonry-item">
-            <a class="project-preview project-preview--elastic project-preview--vertical" href="single-project.html">
-              <span class="project-preview__image">
-                <img src="{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}"
-                  alt="American Coffee Table Book">
-              </span>
-              <span class="project-preview__bottom">
-                <span class="project-preview__title">American Coffee Table Book</span>
-                <span class="project-preview__icon">
-                  <svg width="24" height="23">
-                    <use xlink:href="#link-arrow2"></use>
-                  </svg>
-                </span>
-              </span>
-            </a>
-          </li>
-          <li class="portfolio-section__item __js_masonry-item">
-            <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
-              <span class="project-preview__image">
-                <img src="{{ '/assets/img/bitcoin/bitcoin-coffee-table-book-1.png' | relative_url }}" width="531"
-                  height="417" alt="Bitcoin Coffee Table Book">
-              </span>
-              <span class="project-preview__bottom">
-                <span class="project-preview__title">Bitcoin Coffee Table Book</span>
-                <span class="project-preview__icon">
-                  <svg width="24" height="23">
-                    <use xlink:href="#link-arrow2"></use>
-                  </svg>
-                </span>
-              </span>
-            </a>
-          </li>
-          <li class="portfolio-section__item __js_masonry-item">
-            <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
-              <span class="project-preview__image">
-                <img src="{{ '/assets/img/american/american-coffee-table-book-2.jpg' | relative_url }}" width="531"
-                  height="417" alt="SUN by D.H. Lawrence">
-              </span>
-              <span class="project-preview__bottom">
-                <span class="project-preview__title">SUN by D.H. Lawrence</span>
-                <span class="project-preview__icon">
-                  <svg width="24" height="23">
-                    <use xlink:href="#link-arrow2"></use>
-                  </svg>
-                </span>
-              </span>
-            </a>
-          </li>
-        </ul>
-      </section>
-  </main>
+    </section>
+    <div class="col-md-8" style="height: 1px;"></div>
+  </div>
+  <section class="portfolio-section portfolio-section--no-padding">
+    <header class="portfolio-section__header row align-items-end">
+      <div class="col-8 col-xl-6 offset-xl-2">
+        <h2 class="portfolio-section__title">Our Books</h2>
+      </div>
+      <div class="col-4 text-right">
+        <a class="portfolio-section__more arrow-link" href="projects-masonry.html">
+          <span class="arrow-link__text">View All Books</span>
+          <span class="arrow-link__icon">
+            <svg width="75" height="75">
+              <use xlink:href="#link-arrow"></use>
+            </svg>
+          </span>
+        </a>
+      </div>
+    </header>
+    <ul class="portfolio-section__grid __js_portfolio-section-masonry">
+      <li class="portfolio-section__item __js_masonry-item">
+        <a class="project-preview project-preview--elastic project-preview--vertical" href="single-project.html">
+          <span class="project-preview__image">
+            <img src="{{ '/assets/img/american/american-coffee-table-book-1.png' | relative_url }}"
+              alt="American Coffee Table Book">
+          </span>
+          <span class="project-preview__bottom">
+            <span class="project-preview__title">American Coffee Table Book</span>
+            <span class="project-preview__icon">
+              <svg width="24" height="23">
+                <use xlink:href="#link-arrow2"></use>
+              </svg>
+            </span>
+          </span>
+        </a>
+      </li>
+      <li class="portfolio-section__item __js_masonry-item">
+        <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
+          <span class="project-preview__image">
+            <img src="{{ '/assets/img/bitcoin/bitcoin-coffee-table-book-1.png' | relative_url }}" width="531"
+              height="417" alt="Bitcoin Coffee Table Book">
+          </span>
+          <span class="project-preview__bottom">
+            <span class="project-preview__title">Bitcoin Coffee Table Book</span>
+            <span class="project-preview__icon">
+              <svg width="24" height="23">
+                <use xlink:href="#link-arrow2"></use>
+              </svg>
+            </span>
+          </span>
+        </a>
+      </li>
+      <li class="portfolio-section__item __js_masonry-item">
+        <a class="project-preview project-preview--elastic project-preview" href="single-project.html">
+          <span class="project-preview__image">
+            <img src="{{ '/assets/img/american/american-coffee-table-book-2.jpg' | relative_url }}" width="531"
+              height="417" alt="SUN by D.H. Lawrence">
+          </span>
+          <span class="project-preview__bottom">
+            <span class="project-preview__title">SUN by D.H. Lawrence</span>
+            <span class="project-preview__icon">
+              <svg width="24" height="23">
+                <use xlink:href="#link-arrow2"></use>
+              </svg>
+            </span>
+          </span>
+        </a>
+      </li>
+    </ul>
+  </section>
+  </div>
+</main>
