--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ sitemap: true
 <main>
   <div class="row">
     <section class="creative-hero col-md-4">
-      <div class="creative-hero__container">
+      <div class="creative-hero__container container container--size-large">
         <div class="row">
           <!-- Text Section -->
           <div class="col-6" data-aos="fade-right" data-aos-delay="0">
