--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@ sitemap: true
           </div>
         </div>
       </div>
+      </div>
       <div class="col-md-8" style="height: 1px;"></div>
-      <section class="portfolio-section portfolio-section--no-padding">
+      <section class="portfolio-section cotainer container--size-large portfolio-section--no-padding">
         <header class="portfolio-section__header row align-items-end">
           <div class="col-8 col-xl-6 offset-xl-2">
             <h2 class="portfolio-section__title">Our Books</h2>
@@ -100,6 +101,5 @@ sitemap: true
           </li>
         </ul>
       </section>
-            </div>
   </article>
 </main>
