--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ sitemap: true
 <main>
   <article class="creative-hero">
     <div class="creative-hero__container container container--size-large">
-      <div class="row col-md-4">
+      <div class="row d-flex align-items-center col-md-4">
         <!-- Text Section -->
         <div class="col-6" data-aos="fade-right" data-aos-delay="0">
           <div class="services-section__text">
