--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ sitemap: true
 <style>
     @media (max-width: 767.98px) {
       .desktop-padding {
-        padding-top: 100 !important;
+        padding-top: 100px !important;
       }
     }
   </style>
